[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.196"
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"